--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Download Pikashow APK for streaming movies, shows, and live TV. Learn how to install and use Pikashow APK -- Download now for unlimited entertainment.">
     <meta name="keywords"
         content="Pikashow apk, download Pikashow apk, Pikashow streaming app, free movies, live TV, Pikashow features">
-    <link rel="canonical" href="https://pikashowguru.com">
+    <link rel="canonical" href="https://pikashowapkdownload.netlify.app/">
     <meta name="robots" content="index, follow">
     <title>Pikashow APK -- Download | Official Guide & Features</title>
     <style>
